--- a/style.css
+++ b/style.css
@@ -3,59 +3,6 @@
     }
 
 /*film page*/
-  @media (max-width: 768px) {
-  .film-row {
-  flex-direction: column;
-  align-items: center;
-}
-.film-card{
-    flex:1 1 100%;
-    max-width: 90%;
-}
-
-  .navbar ul {
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  .navbar a {
-    font-size: 16px;
-  }
-
-  .navbar .separator,
-  .separator-with-logo::before {
-    font-size: 30px;
-    top: 0;
-  }
-
-  .separator-with-logo::after {
-    width: 50px;
-    height: 50px;
-    top: -20px;
-  }
-
-  .content img {
-    width: 90vw;
-    height: auto;
-  }
-
-  .video-background {
-    width: 100vw;
-    height: auto;
-    object-fit: cover;
-  }
-
-
-  img {
-    width: 100% ;
-    height: auto;
-  }
-
-  footer {
-    font-size: 10px;
-    padding: 10px;
-  }
-}
 .film-grid {
   display: flex;
   flex-direction: column;
@@ -99,10 +46,19 @@
   text-overflow: ellipsis; 
 }
 /*Nav bar for all pages logo hover*/
+.separator-with-logo::before {
+  content: "—";
+  font-size: 68px;
+  color: white;
+  opacity: 0.5;
+  display: block;
+  line-height: 1;
+  margin-top: -25px;
+}
 .separator-with-logo::after {
   content: "";
   position: absolute;
-  top: -25px; /* move logo above the dash */
+  top: -40px; /* move logo above the dash */
   left: 50%;
   transform: translateX(-50%) scale(1);
   width: 87px;
@@ -118,5 +74,41 @@
   transition: transform 0.5s ease;
   opacity: 90%;
 }
+    .navbar { font-family: 'Unna',sans-serif;width: 100%; padding: 20px 0; display: flex; justify-content: center;  position: sticky; top: 15px; z-index: 100; }
+    .navbar ul { list-style: none; display: flex; gap: 40px; padding: 0; margin: 0; }
+    .navbar a { color: white; text-decoration: none; font-weight: 600; font-size: 18px; letter-spacing: 0.5px; transition: color 0.3s ease; }
+    .navbar a::after { content: ''; display: block; width: 0; height: 2px; background: white; transition: width 0.3s; margin-top: 5px; }
+    .navbar a:hover::after { width: 100%; }
+    .navbar a:hover { color: #ccc; }
+    .navbar .separator {
+  color: white;
+  opacity: 0.5;
+  font-size: 68px;
+  line-height: 1;
+  user-select: none;
+  pointer-events: none;
+  position: relative;
+  top: -27px;
+}
+
+.navbar .separator::before {
+  content: "—"; /* The actual dash */
+}
+    .separator-with-logo {
+  position: relative;
+  text-align: center;
+}
+
+
+/*Hyperlinks*/
+    a:visited,
+    a:hover,
+    a:link,
+    a:active,
+    a:focus {
+      color: white;
+      text-decoration: none; 
+    }
+
 
 
