--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@
 .film-row {
   display: flex;
   justify-content: flex-start;
-  gap: 80px;
+  gap: 70px;
   flex-wrap: nowrap;
+  margin-right: 0;
+  margin-left: 5.4%;
 }
 
 .film-card {
@@ -24,8 +26,8 @@
   box-sizing: border-box; 
 }
 
-.film-card img {
-  width: 100%;
+.film-card img,.film-card-right img {
+  width: 90%;
   height: auto;
   display: block;
 }
@@ -35,7 +37,7 @@
 }
 .film-card-right {
   flex: 0 0 48%;
-  margin-left: auto;
+  margin-left: 0;
   max-width: 48vw;     
   min-width: 280px;    
   box-sizing: border-box; 
@@ -76,7 +78,7 @@
 }
     .navbar { font-family: 'Unna',sans-serif;width: 100%; padding: 20px 0; display: flex; justify-content: center;  position: sticky; top: 15px; z-index: 100; }
     .navbar ul { list-style: none; display: flex; gap: 40px; padding: 0; margin: 0; }
-    .navbar a { color: white; text-decoration: none; font-weight: 600; font-size: 18px; letter-spacing: 0.5px; transition: color 0.3s ease; }
+    .navbar a { color: white; text-decoration: none; font-weight: 600; font-size: 20px; letter-spacing: 0.5px; transition: color 0.3s ease; }
     .navbar a::after { content: ''; display: block; width: 0; height: 2px; background: white; transition: width 0.3s; margin-top: 5px; }
     .navbar a:hover::after { width: 100%; }
     .navbar a:hover { color: #ccc; }
